--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                     <fieldset>
                         <legend>Valor da despesa</legend>
-                        <input type="text" name="amount" id="amount" placeholder="0,00" required />
+                        <input type="text" name="amount" id="amount" placeholder="R$ 0,00" required />
                     </fieldset>
                 </div>
 
@@ -85,6 +85,7 @@
             </aside>
         </section>
     </main>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
