--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 </header>
 
                 <ul>
+                    <!-- Exemplo da estrutura HTML de um item de despesa 
                     <li class="expense">
                         <img src="./img/food.svg" alt="Ícone de alimentação" />
 
@@ -81,6 +82,7 @@
 
                         <img src="./img/remove.svg" alt="remover" class="remove-icon" />
                     </li>
+                    -->
                 </ul>
             </aside>
         </section>
